# Krisco

./: .gitignore  README.md  app.py  cli.py  github_file_services.py  models.py  pyproject.toml
blueprints/: __init__.py  auth.py  gallery.py  guestbook.py  index.py  upload.py
data/: guestbook.json  guestbook.txt
setup_utils/: cli.py  config.py  constants.py  github_file_services.py  models.py
static/: player-buttons.css  script.js  spa.js  style.css
templates/: base.html  gallery.html  guestbook.html  index.html  login.html  messages.html  story.html  upload.html
