[project]
name = "for-krisco"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pygithub>=2.8.1",
    "streamlit>=1.49.1",
]

[tool.uv.workspace]
members = [
    "Krisco_mon",
    "mini_obsidian",
]
