[project]
name = "for-krisco"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pygithub>=2.8.1",
    "streamlit>=1.49.1",
    "textual>=6.2.0",
    "textual-dev>=1.7.0",
]

[tool.uv.workspace]
members = [
    "Krisco_mon",
    "mini_obsidian",
    "test_scripts/python/tuis_with_text",
]
